@@ -17,14 +17,13 @@ http://sf.net/pm/?group_id=105292
 THESE SHOULD HAPPEN BEFORE THE NEXT RELEASE
 -------------------------------------------
 
-* test and release
+* tbd.
 
 
 THESE SHOULD HAPPEN WITHIN TWO RELEASE ITERATIONS
 -------------------------------------------------
 
-* make mged 'mirror' command work with three args like before with
-  last being an axis in order to preserve backwards compatibility
+* tbd.
 
 
 THESE ARE LOWER PRIORITY OR FOR FUTURE RELEASES
